# RECCE

./: README.md  pyproject.toml  train.py
config/: Recce.yml  recce_celebdf.yml
config/dataset/: celeb_df.yml
dataset/: __init__.py  celeb_df.py  unified_dataset.py
model/network/: Recce.py
trainer/: abstract_trainer.py  single_gpu_trainer.py
